[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://src/Objects/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/PlayerImages.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.77374, 6.70734 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 6.46318 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="PlayerImages" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 4 )]

[node name="DeathTimer" type="Timer" parent="."]

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, 9 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -18 )
current = true
limit_left = -1376
limit_top = -300
limit_right = 400
limit_bottom = 210
limit_smoothed = true
smoothing_enabled = true
drag_margin_top = 0.75
editor_draw_limits = true
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="grounded_updated" from="." to="Camera2D" method="_on_Player_grounded_updated"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
